# verifiers

./: DPO_FRENCH_README.md  setup_dpo_french_environment.py
environments/deepconf/: README.md  deepconf.py  example_usage.py  pyproject.toml
environments/vf-dpo-french-reasoning/: README.md  pyproject.toml  vf_dpo_french_reasoning.py
examples/dpo/: evaluate_dpo_french.py  train_dpo_french_reasoning.py
examples/grpo/: train_grpo_dpo_french.py
