[project]
name = "deepconf"
version = "0.1.0"
description = "DeepConf environment for confidence-aware LLM reasoning evaluation"
tags = ["deepconf", "confidence", "reasoning", "single-turn", "math", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deepconf.py"]
