[project]
name = "vf-dpo-french-reasoning"
version = "0.1.0"
description = "DPO French reasoning environment with thinking generation and translation"
tags = ["dpo", "french", "reasoning", "thinking", "preference", "translation"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
    "transformers",
    "torch",
    "datasets",
    "langdetect",
    "deep-translator",
    "accelerate",
    "peft",
    "trl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_dpo_french_reasoning.py"]
